Add a loading indicator to the list as a footer view

--- a/xingchallenge/app/src/main/res/values/strings.xml
+++ b/xingchallenge/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="repository">Repository</string>
     <string name="owner">User Profile</string>
     <string name="cancel">Cancel</string>
+    <string name="loading">Loading more repositories...</string>
 </resources>
