--- a/xingchallenge/app/src/main/res/values/strings.xml
+++ b/xingchallenge/app/src/main/res/values/strings.xml
@@ -1,10 +1,17 @@
 <resources>
     <string name="app_name">XING Challenge</string>
-    <string name="action_settings">Settings</string>
 
     <string name="dialog_message">Would you like to open the repository page for %1$s or visit the user profile of %2$s?</string>
     <string name="repository">Repository</string>
     <string name="owner">User Profile</string>
     <string name="cancel">Cancel</string>
     <string name="loading">Loading more repositories...</string>
+    <string name="first_load">Loading repositories...</string>
+    <string name="no_data">Unable to load repositories, or no repositories found.</string>
+
+    <string name="unknown_host">Unable to connect to GitHub.</string>
+
+    <string name="network_error">Network Error.</string>
+    <string name="network_error_message">No network connection could be found.\n\nPlease connect to the internet and try again.</string>
+    <string name="retry">Retry</string>
 </resources>
